# stella_nav2_plugins

./: CMakeLists.txt  README.md  behavior_plugin.xml  package.xml  plugins.xml
include/stella_nav2_plugins/plugins/: goal_checker.hpp  wait_for_button.hpp
include/stella_nav2_plugins/plugins/action/: add_two_float_action.hpp  publish_path_action.hpp  publish_string_action.hpp  remove_passed_goals_action.hpp  tail_path_action.hpp
include/stella_nav2_plugins/plugins/decorator/: time_based_retry.hpp
plugins/: goal_checker.cpp  wait_for_button.cpp  wait_for_button.hpp
plugins/action/: add_two_float_action.cpp  publish_path_action.cpp  publish_string_action.cpp  remove_passed_goals_action.cpp  tail_path_action.cpp
plugins/decorator/: time_based_retry.cpp
