<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>stella_nav2_plugins</name>
    <version>1.0.0</version>
    <description>TODO</description>
    <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>builtin_interfaces</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>stella</depend>
    <depend>nav2_common</depend>
    <depend>nav2_core</depend>
    <depend>nav2_msgs</depend>
    <depend>nav2_util</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>behaviortree_cpp_v3</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/behavior_plugin.xml" />
    </export>
</package>
